[package]
name = "async-ffi"
version = "0.4.1"
edition = "2021"
description = "FFI-compatible `Future`s"
keywords = ["ffi", "async", "futures"]
categories = ["asynchronous", "network-programming", "development-tools::ffi"]
license = "MIT"
repository = "https://github.com/oxalica/async-ffi"
readme = "README.md"
exclude = ["/link_tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
abi_stable = "0.11"
